tests/rosetta/out/Smalltalk/averages-root-mean-square.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| guess i n rms sqrtApprox sum x |
sqrtApprox := [:x | guess := x.
i := 0.
[(i < 20)] whileTrue: [
  guess := ((guess + (x / guess)) / 2).
  i := (i + 1).
]
.
guess ].
n := 10.
sum := 0.
x := 1.
[(x <= n)] whileTrue: [
  sum := (sum + (x asFloat * x asFloat)).
  x := (x + 1).
]
.
rms := sqrtApprox value: (sum / n asFloat).
Transcript show: ((rms asString)) printString; cr.
